--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -22,8 +22,8 @@
 <meta name="msapplication-TileImage" content="{{ base_path }}/images/mstile-144x144.png?v=M44lzPylqQ">
 <meta name="msapplication-config" content="{{ base_path }}/images/browserconfig.xml?v=M44lzPylqQ">
 <meta name="theme-color" content="#ffffff">
+<meta name="google-site-verification" content="x5WcTUuEI3yXzqc7fQl6beR2IfUew5PH9IxVUwx6EEk" />
 <link rel="stylesheet" href="{{ base_path }}/assets/css/academicons.css"/>
-
 <script type="text/x-mathjax-config"> MathJax.Hub.Config({ TeX: { equationNumbers: { autoNumber: "all" } } }); </script>
 <script type="text/x-mathjax-config">
   MathJax.Hub.Config({
